Fixes #32818: table cells overflowing when containing large urls

--- a/Plugin/Croogo/webroot/less/tables.less
+++ b/Plugin/Croogo/webroot/less/tables.less
@@ -10,6 +10,9 @@
 			.sortDirections();
 		}
 	}
+	td {
+		word-break: break-all;
+	}
 }
 
 table {
